src/components/BreadcrumbTrail/BreadcrumbTrail.module.scss
@use "@/design-system/_/_typography.module.scss" as typography;

.leaf-label,
.leaf-label-terminal {
	padding: 0;
}

.leaf-label-terminal {
	font-style: italic;
}

.breadcrumb-list-item {
	display: inline-block;
	list-style-type: none;
	margin-block: 1rem;
}

.breadcrumb-list-item[data-root="false"]::before {
	content: ">";
	display: inline-block;
	inline-size: 3ch;
	text-align: center;
}

.breadcrumb-list {
	display: inline-block;
	padding-inline-start: 0;
}

.breadcrumb-trail {
	@include typography.technical();

	margin-block-end: 6rem;
}

